@@ -9,13 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-10-18<BR>
-libCSPavio 2.5.0<BR>
-libCSPgui 2.3.2<BR>
-libCSPosd 2.5.0<BR>
+Qt Port and FM7 series 2016-10-26<BR>
+libCSPavio 2.5.1<BR>
+libCSPgui 2.3.3<BR>
+libCSPosd 2.5.1<BR>
 libCSPemu_utils 2.2.0<BR>
-FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
-Build Version: 004920711399d430ead55e59c948e7fb7a04a402<BR>
+FFMPEG 3.1.5 + liblame 3.99 + libx264-148<BR>
+Build Version: 006cc1d851483ea84fc5a3f4fa58cbf03302c49b<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -68,5 +68,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Tue 18,October 2016 11:24:35<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu 27,October 2016 17:02:52<!-- hhmts end -->
 </body> </html>
